Fixed grid spacing

--- a/positionstyles.css
+++ b/positionstyles.css
@@ -159,32 +159,32 @@
   height: 100%;
   background-color: red;
   z-index: 1;
-  grid-column: 1/4;
-  grid-row: 1/2;
+  grid-column: 1/5;
+  grid-row: 1/3;
 }
 .green6 {
   width: 100%;
   height: 100%;
   background-color: green;
   z-index: 3;
-  grid-column: 1/2;
-  grid-row: 5/6;
+  grid-column: 1/3;
+  grid-row: 5/7;
 }
 .yellow6 {
   width: 100%;
   height: 100%;
   background-color: gold;
   z-index: 3;
-  grid-column: 5/6;
-  grid-row: 3/6;
+  grid-column: 5/7;
+  grid-row: 3/7;
 }
 .blue6 {
   width: 100%;
   height: 100%;
   background-color: blue;
   z-index: 2;
-  grid-column: 2/5;
-  grid-row: 2/5;
+  grid-column: 2/6;
+  grid-row: 2/6;
 }
 
 /* Do not make any changes below here */
